Unnecessary aligner rules deleted, intro bg cover property deleted from mobile and tablet, menu open/close button vertical position fixed

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -547,8 +547,6 @@ input[type="radio"].visually-hidden {
     width: 660px; }
     .aligner--header {
       width: 100%; }
-    .aligner--flexible {
-      width: 660px; }
     .aligner--form {
       width: 620px; }
     .aligner--panorama {
@@ -1992,8 +1990,7 @@ input[type="radio"].visually-hidden {
   background-color: #1d2631;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center top;
-  background-size: cover; }
+  background-position: center top; }
 
 .intro__title {
   margin-top: 0;
@@ -2052,7 +2049,8 @@ input[type="radio"].visually-hidden {
 @media (min-width: 980px) {
   .intro {
     background-image: url("../img/bg-back-desktop@1x.jpg");
-    background-position: calc(50% + 1px) 0; }
+    background-position: calc(50% + 1px) 0;
+    background-size: cover; }
   .intro__title {
     padding-top: 62px;
     font-size: 50px;
@@ -2260,6 +2258,10 @@ input[type="radio"].visually-hidden {
     display: none; }
   .page-header__navigation--closed .page-header__list {
     display: none; }
+  .page-header__button--open {
+    top: 44px; }
+  .page-header__button--close {
+    top: 45px; }
   .page-header--nojs {
     position: static; }
     .page-header--nojs .page-header__top-wrapper {
