--- a/source/sass/blocks/aligner.scss
+++ b/source/sass/blocks/aligner.scss
@@ -22,9 +22,6 @@
     &--header {
       width: 100%;
     }
-    &--flexible {
-      width: 660px;
-    }
     &--form {
       width: 620px;
     }
